Updated stuff; turn pid should work now

--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -5,11 +5,11 @@
 	},
 	"project": {
 		"name": "1082V_Code",
-		"description": " Blue Left | Not finalized",
+		"description": " Auton Skills | Not finalized",
 		"creationDate": "12/4/2024, 7:04:54 PM",
 		"platform": "V5",
 		"language": "cpp",
-		"slot": 5,
+		"slot": 6,
 		"sdkVersion": "V5_20240802_15_00_00",
 		"cpp": {
 			"includePath": [],
